@@ -3,3 +3,4 @@ require File.dirname(__FILE__) + '/module/attribute_accessors'
 require File.dirname(__FILE__) + '/module/delegation'
 require File.dirname(__FILE__) + '/module/introspection'
 require File.dirname(__FILE__) + '/module/loading'
+require File.dirname(__FILE__) + '/module/aliasing'
